2013-02-11  James Robinson  <jamesr@chromium.org>

        [Chromium] Get rid of WebAnimationController
        https://bugs.webkit.org/show_bug.cgi?id=109235

        Reviewed by Benjamin Poulain.

        * public/WebAnimationController.h: Removed.
        * public/WebFrame.h:
        (WebFrame):
        * src/WebAnimationControllerImpl.cpp: Removed.
        * src/WebAnimationControllerImpl.h: Removed.
        * src/WebFrameImpl.cpp:
        * src/WebFrameImpl.h:
        (WebFrameImpl):

2013-02-11  James Robinson  <jamesr@chromium.org>

        [chromium] Add WebUnitTestSupport::createLayerTreeViewForTesting for webkit_unit_tests
        https://bugs.webkit.org/show_bug.cgi?id=109403

        Reviewed by Adam Barth.

        * tests/GraphicsLayerChromiumTest.cpp:
        (WebKit::GraphicsLayerChromiumTest::GraphicsLayerChromiumTest):
        * tests/ScrollingCoordinatorChromiumTest.cpp:
        (WebKit::FakeWebViewClient::initializeLayerTreeView):

2013-02-11  Ryosuke Niwa  <rniwa@webkit.org>

        Disable delete button controller on non-Mac ports and delete EditorClient::shouldShowDeleteInterface
        https://bugs.webkit.org/show_bug.cgi?id=109534

        Reviewed by Anders Carlsson.

        * src/EditorClientImpl.cpp:
        (WebKit):
        * src/EditorClientImpl.h:
        (EditorClientImpl):

2013-02-11  Alexandre Elias  <aelias@chromium.org>

        [chromium] Apply page scale to all WebInputEvent types
        https://bugs.webkit.org/show_bug.cgi?id=109370

        Reviewed by James Robinson.

        Previously we only adjusted a few common input event types by page
        scale, but in fact almost every position and size in WebInputEvents
        requires it.

        I also took the opportunity to change some WebGestureEvent members to
        floats (which I checked causes no warnings in Chromium-side code with
        GCC or Clang).

        New WebInputEventConversionTest: InputEventsScaling

        * public/WebInputEvent.h: